(lang dune 3.7)

(name ocamlmycaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Amitav")

(maintainers "Amitav")

(license LICENSE)

(documentation does_not_exists)

(package
 (name ocamlmycaml)
 (synopsis "Ocaml my caml")
 (description "Ocaml my caml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
